<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5F7FA"
    android:contentDescription="logo image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/weight"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editWeight"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="5"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColorHint="#795548"
                tools:ignore="LabelFor,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/height"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editHeight"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="5"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColorHint="#795548"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/BMI"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/BMI"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/classification"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/Criteria"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="casual"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cal_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </LinearLayout>


</ScrollView>